--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styly.css" />
   </head>
   <body>
-    <h1>Piškvorky</h1>
+    <main class="container">
+      <div class="image"><img src="images/uvodni.jpg" /></div>
+      <div class="info">
+        <h1 class="info__nadpis">Piškvorky</h1>
+        <div class="info__text">
+          Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle
+          se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši
+          skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
+          čtverečkovaný papír. Přejeme vám hodně zábavy!
+        </div>
+      </div>
+      <div class="buttons">
+        <a class="buttons__rules">Pravidla<a href="https://czechitas-podklady.cz/Piskvorky-pravidla/"
+        <a class="buttons__play">Zacni hrat</a>
+      </div>
+    </main>
   </body>
 </html>
