--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styly.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster:wght@400&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main class="container">
-      <div class="image"><img src="images/uvodni.jpg" /></div>
+      <div class="image"><img src="images/uvodni.jpg" alt="ctyrlistek" /></div>
       <div class="info">
         <h1 class="info__nadpis">Piškvorky</h1>
         <div class="info__text">
@@ -19,8 +24,12 @@
         </div>
       </div>
       <div class="buttons">
-        <a class="buttons__rules">Pravidla<a href="https://czechitas-podklady.cz/Piskvorky-pravidla/"
-        <a class="buttons__play">Zacni hrat</a>
+        <a
+          class="buttons__rules"
+          href="https://czechitas-podklady.cz/Piskvorky-pravidla/"
+          >Pravidla</a
+        >
+        <a class="buttons__play" href="index.html">Začít hrát</a>
       </div>
     </main>
   </body>
