--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <main class="container">
+  <body class="container">
       <div class="image"><img src="images/uvodni.jpg" alt="ctyrlistek" /></div>
       <div class="info">
         <h1 class="info__nadpis">Piškvorky</h1>
