--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           href="https://czechitas-podklady.cz/Piskvorky-pravidla/"
           >Pravidla</a
         >
-        <a class="buttons__play" href="index.html">Začít hrát</a>
+        <a class="buttons__play" href="hra.html">Začít hrát</a>
       </div>
     </main>
   </body>
