--- a/hra.html
+++ b/hra.html
@@ -3,8 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Piškvorky</title>
   </head>
   <link rel="stylesheet" type="text/css" href="styly.css" />
-  <body></body>
+  <body class="container">
+    <h1 class="info__nadpis">Piškvorky</h1>
+    <div class="playgound">
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+    </div>
+  </body>
 </html>
