--- a/hra.html
+++ b/hra.html
@@ -4,11 +4,114 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Piškvorky</title>
+    <link rel="stylesheet" type="text/css" href="styly.css" />
   </head>
-  <link rel="stylesheet" type="text/css" href="styly.css" />
   <body class="container">
-    <h1 class="info__nadpis">Piškvorky</h1>
-    <div class="playgound">
+    <h1 class="info__title">Piškvorky</h1>
+    <div class="menu__buttons">
+      <div class="menu__buttons--turn">
+        <p>HRAJE:</p>
+        <a href="index.html"
+          ><img src="images/circle.svg" alt="circleButton"
+        /></a>
+      </div>
+      <a href="index.html" class="menu__buttons--home">
+        <img src="images/home.svg" alt="homeButton" />
+      </a>
+      <a href="hra.html" class="menu__buttons--restart">
+        <img src="images/restart.svg" alt="restartButton" />
+      </a>
+    </div>
+    <div class="playground">
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
+      <button class="pole"></button>
       <button class="pole"></button>
       <button class="pole"></button>
       <button class="pole"></button>
