--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body class="container">
       <div class="image"><img src="images/uvodni.jpg" alt="ctyrlistek" /></div>
       <div class="info">
-        <h1 class="info__nadpis">Piškvorky</h1>
+        <h1 class="info__title">Piškvorky</h1>
         <div class="info__text">
           Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle
           se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši
