--- a/hra.html
+++ b/hra.html
@@ -9,16 +9,16 @@
   <body class="container">
     <h1 class="info__title">Piškvorky</h1>
     <div class="menu__buttons">
-      <div class="menu__buttons--turn">
+      <div class="menu__buttons menu__buttons--turn">
         <p>HRAJE:</p>
-        <a href="index.html"
+        <a href="hra.html"
           ><img src="images/circle.svg" alt="circleButton"
         /></a>
       </div>
-      <a href="index.html" class="menu__buttons--home">
+      <a href="index.html" class="menu__buttons menu__buttons--home">
         <img src="images/home.svg" alt="homeButton" />
       </a>
-      <a href="hra.html" class="menu__buttons--restart">
+      <a href="hra.html" class="menu__buttons menu__buttons--restart">
         <img src="images/restart.svg" alt="restartButton" />
       </a>
     </div>
