--- a/hra.html
+++ b/hra.html
@@ -10,17 +10,19 @@
     <h1 class="info__title">Piškvorky</h1>
     <div class="menu__buttons">
       <div class="menu__buttons menu__buttons--turn">
-        <p>HRAJE:</p>
+        <h2>HRAJE:</h2>
         <a href="hra.html"
           ><img src="images/circle.svg" alt="circleButton"
         /></a>
       </div>
-      <a href="index.html" class="menu__buttons menu__buttons--home">
-        <img src="images/home.svg" alt="homeButton" />
-      </a>
-      <a href="hra.html" class="menu__buttons menu__buttons--restart">
-        <img src="images/restart.svg" alt="restartButton" />
-      </a>
+      <div class="right-side">
+        <a href="index.html" class="menu__buttons menu__buttons--home">
+          <img src="images/home.svg" alt="homeButton" />
+        </a>
+        <a href="hra.html" class="menu__buttons menu__buttons--restart">
+          <img src="images/restart.svg" alt="restartButton" />
+        </a>
+      </div>
     </div>
     <div class="playground">
       <button class="pole"></button>
