--- a/hra.html
+++ b/hra.html
@@ -25,106 +25,106 @@
       </div>
     </div>
     <div class="playground">
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
-      <button class="pole"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
     </div>
   </body>
 </html>
