--- a/hra.html
+++ b/hra.html
@@ -6,7 +6,7 @@
     <title>Piškvorky</title>
     <link rel="stylesheet" type="text/css" href="styly.css" />
   </head>
-  <body class="container">
+  <body class="container__game">
     <h1 class="info__title">Piškvorky</h1>
     <div class="menu__buttons">
       <div class="menu__buttons menu__buttons--turn">
