--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Lobster:wght@400&display=swap"
       rel="stylesheet"
+      <script type="module" src="hra.js"></script>
     />
   </head>
   <body class="container">
