--- a/hra.html
+++ b/hra.html
@@ -15,8 +15,7 @@
         <!-- <a href="hra.html"
           ><img src="images/circle.svg" alt="circleButton"
         /></a> -->
-        <a class="board__field--circle"></a>
-        <a class="board__field--cross"> <img src ="images/circle.svg"</a>
+        <img id="player-indicator" />
       </div>
       <div class="right-side">
         <a href="index.html" class="menu__buttons menu__buttons--home">
