--- a/hra.html
+++ b/hra.html
@@ -27,16 +27,16 @@
       </div>
     </div>
     <div class="playground">
-      <button id="but1" class="box"></button>
-      <button id="but2" class="box"></button>
-      <button id="but3" class="box"></button>
-      <button id="but4" class="box"></button>
-      <button id="but5" class="box"></button>
-      <button id="but6" class="box"></button>
-      <button id="but7" class="box"></button>
-      <button id="but8" class="box"></button>
-      <button id="but9" class="box"></button>
-      <button id="but10" class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
       <button class="box"></button>
       <button class="box"></button>
       <button class="box"></button>
