--- a/hra.html
+++ b/hra.html
@@ -13,7 +13,7 @@
       <div class="menu__buttons">
         <div class="menu__buttons menu__buttons--turn">
           <h2>HRAJE:</h2>
-          <img id="player-indicator" />
+          <img id="player-indicator" src="images/circle2.svg" />
         </div>
         <div class="right-side">
           <a href="index.html" class="menu__buttons menu__buttons--home">
